# CG-project

./: .gitignore  CMakeLists.txt  HistoPart.cpp  README.html  README.md  histo_part.h  histo_part_test.cpp  httplib.h  main.cpp  rand.cpp  random_polygon.h  random_polygon_test.cpp  solve_test.cpp
backend/: HistoPart.cpp
static/: index.html
timetest/: histime.txt  solvetime.txt  time.txt
